The following list contains all changes to pgAdmin3, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-12-09 DP  1.4.1  Sort encoding names in dlgDatabase, per Peter Eisentraut.
    <li>2005-12-06 AP  1.4.1  store UTF8 connect info in pgpass.conf if necessary
    <li>2005-12-03 AP  1.4.1  Major fix for wx2.6.2 API changes (comboboxes)
    <li>2005-12-02 DP  1.4.1  Drop constraints on columns before the columns themselves [Miha Radej]
    <li>2005-12-01 AP  1.4.1  Deal with incompatible wx2.6.2 API changes (comboboxes)
    <li>2005-11-30 AP  1.4.1  Graphical explain: distinct scan images
    <li>2005-11-25 DP  1.4.1  Fix the server status SQL query
    <li>2005-11-25 FGP 1.4.1  Include pg_dump/pg_restore in the Mac OSX bundle
    <li>2005-11-20 DP  1.4.1  Use a proper 'Save As' style dialogue for selecting backup files
    <li>2005-11-20 AP  1.4.1  Don't show pk hint when editing view
    <li>2005-11-20 AP  1.4.1  Add missing NO ACTION FK constraint
    <li>2005-11-09 AP  1.4.1  fix procedure/triggerFunc collection list
    <li>2005-11-09 AP  1.4.1  Allow all 8.x column changes (r: Chris Velevitch)
    <li>2005-11-09 AP  1.4.1  Fix param name quoting for procedures (r: Alex Tyagloff)
    <li>2005-11-04 AP  1.4.0  Fix SET role (r:Florian Pflug), fix role help
    <li>2005-11-04 DP  1.4.0  Fix role inheritance option when creating roles, per Mike Allen
    <li>2005-11-03 DP  1.4.0  Minor fix to the pgAgent command line parser, per Harald Armin Massa
    <li>2005-11-03 DP  1.4.0  Honour type length/precision when creating composite types, per Ivan
    <li>2005-11-02 AP  1.4.0  Fix crash in trigger property (r: Oriza Triznyak)