@@ -18,6 +18,7 @@ The following list contains all changes to pgAdmin3, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2005-12-09 DP  1.4.1  Default the encoding of new databases to the cluster encoding, per Peter Eisentraut.
     <li>2005-12-09 DP  1.4.1  Sort encoding names in dlgDatabase, per Peter Eisentraut.
     <li>2005-12-06 AP  1.4.1  store UTF8 connect info in pgpass.conf if necessary
     <li>2005-12-03 AP  1.4.1  Major fix for wx2.6.2 API changes (comboboxes)
